refactor: rename ptexter to sms
