# internal/docs/api/swagger.json
@@ -239,39 +239,6 @@
                 }
             }
         },
-        "/ptexter": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "promotexter"
-                ],
-                "summary": "Store Lufft observation and health",
-                "parameters": [
-                    {
-                        "description": "Promo Texter parameters",
-                        "name": "req",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/LufftSMSParams"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/ObservationResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/roles": {
             "get": {
                 "security": [
@@ -456,6 +423,39 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/sms": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sms"
+                ],
+                "summary": "Store Lufft observation and health",
+                "parameters": [
+                    {
+                        "description": "SMS parameters",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/LufftSMSParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ObservationResponse"
+                        }
                     }
                 }
             }
@@ -691,6 +691,11 @@
         },
         "/stations/{station_id}/observations": {
             "get": {
+                "security": [
+                    {
+                        "APITokenAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
