# internal/routers/ptexter.go
@@ -1,12 +1,0 @@
-package routers
-
-import (
-	"github.com/gin-gonic/gin"
-)
-
-func (r *DefaultRouter) ptexterRouter(gr *gin.RouterGroup) {
-	ptexter := gr.Group("/ptexter")
-	{
-		ptexter.POST("", r.handler.PromoTexterStoreLufft)
-	}
-}
